--- a/styles/components/_video.scss
+++ b/styles/components/_video.scss
@@ -1,15 +1,43 @@
 #video_box{
   float:left;
+  
 }
 
 
 .video_overlays {
-  position:relative;
-  float:left;
-  width:800px;
-  min-height:500px;
+  @include padding(1.5rem, 1.5rem, (0rem, 5rem, 1rem, 5rem));
+   position: relative;
+  width: 90rem;
+  max-width: 150%;
+  overflow: visible;
   z-index:200000;
+   background-color: transparentize(_palette(bg), 0.15);
+  border-radius: _size(border-radius);
+  opacity: 0;
+  text-align: left; 
+  &.timeout {
+    display: none;
+  }
+
+  &.active.timeout {
+    @include vendor('transform', 'translateY(0)');
+    opacity: 1;
+  }
+
+  &.active {
+    display: block !important;
+  }
+
+
+
+}
+#video_player,
+.video_player {
+  @include padding(5rem, 5rem, (2rem, 0, 1rem, 0));
+  position: relative;
+  width: 70rem; 
   max-width: 100%;
+  float:left; 
   background-color: transparentize(_palette(bg), 0.15);
   border-radius: _size(border-radius);
   opacity: 0;
@@ -30,7 +58,6 @@
 
 
 }
-
 .minimize {
   display: block;
   position: absolute;
