--- a/styles/components/_icon.scss
+++ b/styles/components/_icon.scss
@@ -10,12 +10,53 @@
 		@include icon;
 		border-bottom: none;
 		position: relative;
+		fill: white;
+
 
 		> .label {
 			display: none;
 		}
+
+		&:hover {
+			&:before {
+				background-color: _palette(border-bg);
+			}
+		}
+
+		&:active {
+			&:before {
+				background-color: _palette(border-bg-alt);
+			}
+		}
+	}
+.speak_icon {
+	@include icon;
+	cursor: pointer; 
+ 	border-bottom: none;
+	position: relative;
+	fill: white; 
+
+	&:hover {
+		&:before {
+			background-color: _palette(border-bg);
+		}
 	}
 
+	&:active {
+		&:before {
+			background-color: _palette(border-bg-alt);
+		}
+	}
+}
+
+
+.speaking {
+	@include icon;
+	fill: gray; 
+	> .label {
+		display: none;
+	}
+}
 
 .close {
 	display: block;
@@ -41,6 +82,55 @@
 		border-radius: 100%;
 		background-position: center;
 		background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20px" height="20px" viewBox="0 0 20 20" zoomAndPan="disable"><style>line { stroke: #{_palette(border)}; stroke-width: 1; }</style><line x1="2" y1="2" x2="18" y2="18" /><line x1="18" y1="2" x2="2" y2="18" /></svg>');
+		background-size: 20px 20px;
+		background-repeat: no-repeat;
+	}
+
+	&:hover {
+		&:before {
+			background-color: _palette(border-bg);
+		}
+	}
+
+	&:active {
+		&:before {
+			background-color: _palette(border-bg-alt);
+		}
+	}
+}
+
+$micSvg:svg-url('<svg width="96px" height="96px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">'+
+'<path id="time-3-icon" d="M256,50C142.229,50,50,142.229,50,256c0,113.77,92.229,206,206,206c113.77,0,206-92.23,206-206'+
+'C462,142.229,369.77,50,256,50z M256,417c-88.977,0-161-72.008-161-161c0-88.979,72.008-161,161-161c88.977,0,161,72.007,161,161'+
+'C417,344.977,344.992,417,256,417z M382.816,265.785c1.711,0.297,2.961,1.781,2.961,3.518v0.093c0,1.72-1.223,3.188-2.914,3.505'+
+'c-37.093,6.938-124.97,21.35-134.613,21.35c-13.808,0-25-11.192-25-25c0-9.832,14.79-104.675,21.618-143.081'+
+'c0.274-1.542,1.615-2.669,3.181-2.669h0.008c1.709,0,3.164,1.243,3.431,2.932l18.933,119.904L382.816,265.785z"/>'+
+'</svg>');
+
+.mic {
+	display: block;
+	position: relative;
+	width: 4rem;
+	height: 4rem;
+	cursor: pointer;
+	text-indent: 4rem;
+	overflow: hidden;
+	white-space: nowrap;
+	background-image: $micSvg;
+	background-color: _palette(border-bg);
+
+
+	&:before {
+		content: '';
+		display: block;
+		position: absolute;
+		top: 0.75rem;
+		left: 0.75rem;
+		width: 2.5rem;
+		height: 2.5rem;
+		border-radius: 100%;
+		background-position: center;
+		background-image: $micSvg;
 		background-size: 20px 20px;
 		background-repeat: no-repeat;
 	}
